[package]
    authors = [
        "Eugene P. <eupn@protonmail.com>",
        "Henrik B. <hargonix@gmail.com>",
    ]
    categories = ["embedded", "hardware-support", "no-std"]
    description = "Bosch Sensortec BNO055 9-axis IMU driver"
    edition = "2018"
    keywords = ["embedded-hal-driver", "bno055"]
    license-file = "LICENSE"
    name = "bno055"
    readme = "README.md"
    repository = "https://github.com/eupn/bno055"
    version = "0.4.0-interrupts"

    # linux-embedded-hal requires 1.65 because of nix
    rust-version = "1.65"

[dependencies]
    bitflags = "2"
    byteorder = { version = "1", default-features = false }
    mint = "^0.5.4"
    num-derive = "0.4.1"
    num-traits = { version = "0.2.15", default-features = false, features = [
        "libm",
    ] }
    serde = { version = "1.0", default-features = false, features = [
        "derive",
    ], optional = true }

    defmt = { version = "0.3", optional = true }

    embedded-hal = { version = "1.0" }

[features]
    default = []
    std     = []

    defmt-03 = ["dep:defmt", "embedded-hal/defmt-03"]
    serde    = ["dep:serde", "mint/serde"]

[dev-dependencies]
    linux-embedded-hal = "0.4"
